--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     //compile 'com.android.support.constraint:constraint-layout:1.0.1'
     compile 'com.google.firebase:firebase-core:10.2.0'
     compile 'com.google.firebase:firebase-database:10.2.0'
+    compile 'com.romainpiel.shimmer:library:1.4.0@aar'
+    compile 'com.vstechlab.easyfonts:easyfonts:1.0.0'
+    compile 'com.android.support:cardview-v7:25.2.0'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
