--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.google.firebase:firebase-core:10.2.0'
     compile 'com.google.firebase:firebase-database:10.2.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
