--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,17 @@
 
         </activity>
         <activity android:name=".EmployeePoll">
+
+        </activity>
+        <activity android:name=".PollQuestions">
+         </activity>
+        <activity android:name=".DataGraph">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PollQuestions">
-         </activity>
     </application>
 
 </manifest>
