--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
-            android:label=""
+            android:label="PollingApp"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity android:name=".EmployeePoll" />
         <activity android:name=".PollQuestions"></activity>
@@ -25,6 +26,7 @@
 
         </activity>
         <activity android:name=".AddQuestions"></activity>
+
     </application>
 
 </manifest>
